# ros_essentials

client_server/: CMakeLists.txt  package.xml
client_server/src/: client_template.cpp  server_template.cpp
pubsub/: CMakeLists.txt  package.xml
pubsub/config/: config.yaml
pubsub/doc/: std_msgs.txt
pubsub/launch/: pubsub_template.launch
pubsub/msg/: MsgTemplate.msg
pubsub/src/: .publisher_template.cpp.swp  publisher_template.cpp  subscriber_template.cpp
ros_essentials/: CMakeLists.txt  package.xml
ros_pubsub/: CMakeLists.txt  package.xml  service_client_template.cpp
ros_pubsub/msg/: SensorInformation.msg
ros_pubsub/scripts/: metres_to_feet_client.py  metres_to_feet_server.py  sensor_info_publisher.py  sensor_info_subscriber.py  simple_publisher.py  simple_subscriber.py
ros_pubsub/src/: CMakeLists.txt  package.xml  pub_node.cpp  srv_client.cpp  srv_node.cpp  sub_node.cpp
